@@ -1,3 +1,9 @@
+2008-12-05  Alexandru Harsanyi  <haral@users.sourceforge.net>
+
+	* ucm.el (ucm-read-activity): BUGFIX: use `cond' instead of `case'
+	(ucm-actb-checkin-command, ucm-checkin-activity ): update
+	`log-edit' call for Emacs23
+
 2008-12-03  Alexandru Harsanyi  <haral@users.sourceforge.net>
 
 	* vc-clearcase.el (clearcase-read-view-tag, clearcase-read-label):
@@ -42,7 +48,7 @@
 
 	* vc-clearcase.el (clearcase-refresh-files): 378 use
 	`vc-mode-line' and `vc-resynch-buffer' to refresh the vc state
- 
+
 2008-09-04  Alexandru Harsanyi  <haral@users.sourceforge.net>
 
 	* ucm.el (ucm-actb-create-ewoc): 375 add the stream to the ewoc
